TEST_PROGRAMS/VALID/07/var_decl_exp.go
// 1 var declaration specifying exp only
package main

var x = 1
func main () {
	var y = 2.64
	if(true) {
		var z  = "hello world"
	}
	var k rune = '\r'
}
