TEST_PROGRAMS/INVALID/04/15.go
package main

func main() {
    //Illegal escape in rune
    var x = '\"'
    x++ // "use" x
}
